# pretix-postfinance

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  default.nix  flake.nix  postfinancecheckout.nix  pretixplugin.toml  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
pretix_postfinance/: __init__.py  _types.py  admin.py  api.py  apps.py  installments.py  models.py  payment.py  signals.py  tasks.py  urls.py  utils.py  views.py
pretix_postfinance/migrations/: 0001_installmentschedule.py
pretix_postfinance/static/pretix_postfinance/: control.js  installment_indicator.js  pretix-postfinance.js
pretix_postfinance/templates/pretixplugins/postfinance/: checkout_payment_confirm.html  control.html  control_head.html  control_settings.html  installment_order_cancelled.html  installment_payment_failed.html  installment_payment_failed_organizer.html  installment_payment_success.html  installment_reminder.html  installment_selection.html  pending.html  settings_test_connection_button.html
tests/: __init__.py  conftest.py  settings.py  test_api.py  test_installments.py  test_line_items.py  test_provider.py  test_settings.py  test_utils.py  test_views.py  test_webhook.py
