[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretix-postfinance"
version = "1.0.0"
description = "PostFinance Checkout payment plugin for pretix"
readme = "README.md"
license = "AGPLv3"
requires-python = ">=3.9"
dependencies = [
    "pretix>=2024.1.0",
    "postfinancecheckout>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "django>=4.0",
    "mypy>=1.0",
    "django-stubs>=4.0",
    "ruff>=0.1",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

# Django plugin
plugins = ["mypy_django_plugin.main"]

# Ignore missing imports for packages without stubs
[[tool.mypy.overrides]]
module = [
    "pretix.*",
    "postfinancecheckout.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pretix_postfinance"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
